[package]
name = "claude-code-manager"
version = "0.1.0"
edition = "2021"
authors = ["Eyal Levin"]
description = "A CLI tool to manage Claude Code sessions through tmux"
license = "MIT"
repository = "https://github.com/eyalev/claude-code-manager"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
